prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  preview-svc
spec:
  ports:
  - name: "80"
    nodePort: 30300
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
