prod/service.yaml
apiVersion: v1
kind: Service
metadata:
       name: furiosservice 
spec:
  ports:
  - name: "80"
    nodePort: 30200
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
